--- a/Pages/fish.html
+++ b/Pages/fish.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./fish.css">
         <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.ico">
         <script>
-            document.write("<base href='http://" + document.location.host + "' />");
+            document.write("<base href='https://" + document.location.host + "' />");
     
             function toggleMenu() {
                 document.getElementById("Dropdown").classList.toggle("show");
