fixed base tag to https

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./style.css">
         <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.ico">
         <script>
-            document.write("<base href='https://" + document.location.host + "' />");
+        document.write("<base href='https://" + document.location.host + "/paradigm-pet-professionals/' />");
 
             const html = document.documentElement;
 
