fixed links 3rd time

--- a/Pages/FAQ.html
+++ b/Pages/FAQ.html
@@ -40,7 +40,7 @@
                     <h1>During New Pet Care Consultations, our "Pexperts" Often Hear These Frequently Asked Questions</h1>
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/dog-flea-treatment.webp" alt="Dog Getting Flea Treatment">
+                            <img src="./Assets/Images/dog-flea-treatment.webp" alt="Dog Getting Flea Treatment">
                         </div>
                         <div class="right-text">
                             <h2>What is the best way to rid my dog or cat of fleas?</h2>
@@ -72,13 +72,13 @@
                             </p>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/man-with-birds.webp" alt="Man with Sun Conyers">
+                            <img src="./Assets/Images/man-with-birds.webp" alt="Man with Sun Conyers">
                         </div>
                     </div>
             
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/girl-with-snake.webp" alt="Girl Holding Pet Snake">
+                            <img src="./Assets/Images/girl-with-snake.webp" alt="Girl Holding Pet Snake">
                         </div>
                         <div class="right-text">
                             <h2>How often should I feed my pet snake?</h2>
