--- a/Pages/cats.html
+++ b/Pages/cats.html
@@ -40,7 +40,7 @@
                     <h1>General Care Guidelines for Your Feline Friend</h1>
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/woman-kissing-cat.webp" alt="Woman Nuzzling Cat">
+                            <img src="./Assets/Images/woman-kissing-cat.webp" alt="Woman Nuzzling Cat">
                         </div>
                         <div class="right-text">
                             <p>
@@ -72,13 +72,13 @@
                             </ul>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/cat-and-kitten.webp" alt="Cat Queen & Kitten">
+                            <img src="./Assets/Images/cat-and-kitten.webp" alt="Cat Queen & Kitten">
                         </div>
                     </div>
             
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/woman-kissing-kitten.webp" alt="Woman Kissing Kitten">
+                            <img src="./Assets/Images/woman-kissing-kitten.webp" alt="Woman Kissing Kitten">
                         </div>
                         <div class="right-text">
                             <h2>Four Weeks to One Year</h2>
@@ -110,13 +110,13 @@
                             </p>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/woman-holding-cat.webp" alt="Woman Holding Cat">
+                            <img src="./Assets/Images/woman-holding-cat.webp" alt="Woman Holding Cat">
                         </div>
                     </div>
                     
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/old-cat.webp" alt="20 Year-old Cat">
+                            <img src="./Assets/Images/old-cat.webp" alt="20 Year-old Cat">
                         </div>
                         <div class="right-text">
                             <h2>Seven Years and More</h2>
