--- a/Pages/fish.html
+++ b/Pages/fish.html
@@ -26,9 +26,9 @@
                 }
             }
             
-            document.write("<link rel='stylesheet' href='../Components/header.css'>");
-            document.write("<link rel='stylesheet' href='../Components/sidebar.css'>");
-            document.write("<link rel='stylesheet' href='../Components/footer.css'>");
+            document.write("<link rel='stylesheet' href='./Components/header.css'>");
+            document.write("<link rel='stylesheet' href='./Components/sidebar.css'>");
+            document.write("<link rel='stylesheet' href='./Components/footer.css'>");
 
             async function addElements() {
                 const header = await fetch('./Components/header.html');
@@ -50,7 +50,7 @@
                     <h1>General Care Guidelines for Your Fish Friends</h1>
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/fish-aquarium.webp" alt="Fish Swimming In Aquarium Tank">
+                            <img src="./Assets/Images/fish-aquarium.webp" alt="Fish Swimming In Aquarium Tank">
                         </div>
                         <div class="right-text">
                             <p>
@@ -89,13 +89,13 @@
                             </ul>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/boy-with-aquarium.webp" alt="Boy With Colorful Fish in Aquarium">
+                            <img src="./Assets/Images/boy-with-aquarium.webp" alt="Boy With Colorful Fish in Aquarium">
                         </div>
                     </div>
                     
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/girl-dad-saltwater-aquarium.webp" alt="Girl with Dad Looking at Saltwater Aquarium">
+                            <img src="./Assets/Images/girl-dad-saltwater-aquarium.webp" alt="Girl with Dad Looking at Saltwater Aquarium">
                         </div>
                         <div class="right-text">
                             <h2>Saltwater Fish</h2>
@@ -129,7 +129,7 @@
                             </p>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/make-tap-water-fish-safe.webp" alt="Make Tap Water Fish-Safe">
+                            <img src="./Assets/Images/make-tap-water-fish-safe.webp" alt="Make Tap Water Fish-Safe">
                         </div>
                     </div>
                 </section>
