--- a/Pages/schedule.html
+++ b/Pages/schedule.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule New Pet Care Consultation - Paradigm Pet Professionals</title>
     <link rel="stylesheet" href="./schedule.css">
-    <link rel="icon" type="image/x-icon" href="../Assets/Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.ico">
     <script>
         document.write("<base href='https://" + document.location.host + "/paradigm-pet-professionals/' />");
 
