--- a/Pages/credits.html
+++ b/Pages/credits.html
@@ -26,9 +26,9 @@
                 }
             }
             
-            document.write("<link rel='stylesheet' href='../Components/header.css'>");
-            document.write("<link rel='stylesheet' href='../Components/sidebar.css'>");
-            document.write("<link rel='stylesheet' href='../Components/footer.css'>");
+            document.write("<link rel='stylesheet' href='./Components/header.css'>");
+            document.write("<link rel='stylesheet' href='./Components/sidebar.css'>");
+            document.write("<link rel='stylesheet' href='./Components/footer.css'>");
 
             async function addElements() {
                 const header = await fetch('./Components/header.html');
