--- a/Pages/dogs.html
+++ b/Pages/dogs.html
@@ -26,9 +26,9 @@
                 }
             }
             
-            document.write("<link rel='stylesheet' href='../Components/header.css'>");
-            document.write("<link rel='stylesheet' href='../Components/sidebar.css'>");
-            document.write("<link rel='stylesheet' href='../Components/footer.css'>");
+            document.write("<link rel='stylesheet' href='./Components/header.css'>");
+            document.write("<link rel='stylesheet' href='./Components/sidebar.css'>");
+            document.write("<link rel='stylesheet' href='./Components/footer.css'>");
 
             async function addElements() {
                 const header = await fetch('./Components/header.html');
@@ -50,7 +50,7 @@
                     <h1>General Care Guidelines for Your Canine Companion</h1>
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/woman-dog-sunrise.webp" alt="Woman Sitting with Dog Watching Sunrise">
+                            <img src="./Assets/Images/woman-dog-sunrise.webp" alt="Woman Sitting with Dog Watching Sunrise">
                         </div>
                         <div class="right-text">
                             <p>
@@ -101,13 +101,13 @@
                             </p>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/dog-hose.webp" alt="Girl Plays with Dog in Hose">
+                            <img src="./Assets/Images/dog-hose.webp" alt="Girl Plays with Dog in Hose">
                         </div>
                     </div>
                     
                     <div class="advice">
                         <div class="left-img">
-                            <img src="../Assets/Images/man-grooming-dog.webp" alt="Man Grooming Dog">
+                            <img src="./Assets/Images/man-grooming-dog.webp" alt="Man Grooming Dog">
                         </div>
                         <div class="right-text">
                             <h2>Grooming & Handling</h2>
@@ -145,7 +145,7 @@
                             </p>
                         </div>
                         <div class="right-img">
-                            <img src="../Assets/Images/veterinarian-giving-puppy-shot.webp" alt="Veterinarian Giving Puppy It's Vaccines">
+                            <img src="./Assets/Images/veterinarian-giving-puppy-shot.webp" alt="Veterinarian Giving Puppy It's Vaccines">
                         </div>
                     </div>
                 </section>
